task: atualiza Web App

--- a/src/MeuPonto.Web_App/wwwroot/app/index.html
+++ b/src/MeuPonto.Web_App/wwwroot/app/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>MeuPonto</title>
+    <title>Meu Ponto</title>
     <base href="/app" />
     <link href="app/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="app/css/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="app/css/app.css" rel="stylesheet" />
     <link href="MeuPonto.Web_App.styles.css" rel="stylesheet" />
     <link href="app/manifest.json" rel="manifest" />
@@ -15,10 +16,10 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Carregando...</div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
+        Aconteceu um erro não tratado.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
